# VeriKnow

./: .gitignore  DEVELOPMENT_PLAN.md  README.md  config.yaml  pyproject.toml
tests/: __init__.py  test_claims.py  test_cli.py  test_computer_agent.py  test_config.py  test_curator.py  test_evaluation.py  test_inspector.py  test_knowledge.py  test_llm.py  test_markdown.py  test_memory.py  test_normalizer.py  test_planner.py  test_publisher.py  test_researcher.py  test_schemas.py  test_verifier.py  test_web_fetch.py
tests/fixtures/: phase13_metadata_eval.json
veriknow/: __init__.py  cli.py  config.py  schemas.py
veriknow/llm/: __init__.py  client.py
veriknow/memory/: __init__.py  store.py
veriknow/modules/: __init__.py  adaptive_profile.py  curator.py  evaluation.py  inspector.py  knowledge.py  normalizer.py  planner.py  publisher.py  researcher.py  verifier.py
veriknow/tools/: browser.py  claims.py  computer_agent.py  computer_runtime.py  computer_use.py  markdown.py  web_fetch.py  web_search.py
