[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "veriknow"
version = "0.1.0"
description = "Local-first knowledge verification workflow"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "VeriKnow contributors" }
]
dependencies = []

[project.optional-dependencies]
browser = [
  "playwright>=1.40"
]
dev = [
  "pytest>=8"
]

[project.scripts]
veriknow = "veriknow.cli:main"

[tool.setuptools.packages.find]
include = ["veriknow*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
